<resources>
    <string name="app_name">QuizApp</string>
    <string name="quizapp">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="replaceable" />
    <string name="an_image">An image</string>
    <string name="_0_10">0/10</string>
    <string name="submit">Submit</string>
    <string name="you_finished_the_quiz">You finished the quiz.</string>
    <string name="a_trophy">A trophy</string>
</resources>