<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuizQuestionActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/replaceable"
                android:textAlignment="center"
                android:textColor="@color/grayishBlack"
                android:textSize="22sp"
                tools:text="Question" />

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/an_image"
                android:src="@drawable/ic_flag_of_argentina" />

            <LinearLayout
                android:id="@+id/ll_progress_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:indeterminate="false"
                    android:max="10"
                    android:minHeight="50dp"
                    android:progress="0" />

                <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/_0_10"
                    android:textColorHint="#7A8089"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_option_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="#7A8089"
                android:textSize="18sp"
                tools:text="Apple" />

            <TextView
                android:id="@+id/tv_option_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="#7A8089"
                android:textSize="18sp"
                tools:text="Huawei" />

            <TextView
                android:id="@+id/tv_option_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="#7A8089"
                android:textSize="18sp"
                tools:text="Oppo" />

            <TextView
                android:id="@+id/tv_option_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/default_option_border_bg"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="#7A8089"
                android:textSize="18sp"
                tools:text="Nokia" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/button_border_bg"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp" />


        </LinearLayout>


    </ScrollView>
</layout>

